# w3

./: .stylish-haskell.yaml  README.md  flake.nix  w3.cabal
src/W3/: Types.hs
test/: Spec.hs
w3-client/src-exe/: Main.hs
w3-client/src/W3/Client/: Types.hs
w3-server/src-exe/: Main.hs
w3-server/src/W3/Server/: Types.hs
